agregue los alphas al yaml

--- a/Actividad_3/Actividad_3.ipynb
+++ b/Actividad_3/Actividad_3.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -321,12 +321,6 @@
        "      <td>[0, 1]</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>diagnostic_encoded</td>\n",
-       "      <td>[3, 1, 0, 5, 4, 2]</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -356,7 +350,6 @@
        "20                bleed                                    [0.0, 1.0, nan]   \n",
        "21            elevation                                    [1.0, 0.0, nan]   \n",
        "22              biopsed                                             [0, 1]   \n",
-       "23   diagnostic_encoded                                 [3, 1, 0, 5, 4, 2]   \n",
        "\n",
        "    Porcentaje nulos  \n",
        "0               0.33  \n",
@@ -381,11 +374,10 @@
        "19              0.18  \n",
        "20              0.00  \n",
        "21              0.00  \n",
-       "22              0.00  \n",
-       "23              0.00  "
+       "22              0.00  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +639,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +866,7 @@
        "minimo           0.00     0.00                0.00  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,17 +998,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['smoke', 'drink', 'background_father', 'background_mother', 'pesticide', 'gender', 'skin_cancer_history', 'cancer_history', 'has_piped_water', 'has_sewage_system', 'fitspatrick', 'diameter_1', 'diameter_2', 'grew', 'hurt', 'changed']\n",
-      "['most_frequent', 'most_frequent', 'most_frequent', 'most_frequent', 'most_frequent', 'most_frequent', 'most_frequent', 'most_frequent', 'most_frequent', 'most_frequent', 'mean', 'mean', 'mean', 'most_frequent', 'most_frequent', 'most_frequent']\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1246,13 +1230,13 @@
        "23               0.0  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.impute import SimpleImputer\n",
+    "# from sklearn.impute import SimpleImputer\n",
     "\n",
     "def imputar_datos(df:pd.DataFrame, lista_col:list, estrategias:list) -> pd.DataFrame:\n",
     "    df_copy = df.copy()\n",
@@ -1293,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1635,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1667,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1704,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1985,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1993,6 +1977,7 @@
      "output_type": "stream",
      "text": [
       "La codificación de la clase diagnostic es: {'ACK': 0, 'BCC': 1, 'MEL': 2, 'NEV': 3, 'SCC': 4, 'SEK': 5}\n",
+      "Nombre de la columna codificada: diagnostic_encoded\n",
       "X_train shape: (804, 11)\n",
       "X_test shape: (345, 11)\n",
       "(1149, 23)\n"
@@ -2219,7 +2204,7 @@
        "22              0.00  "
       ]
      },
-     "execution_count": 370,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2247,6 +2232,7 @@
     "X_train, X_test, y_train, y_test = preproc.generar_train_test(df_imputado, nombre_col_y_cod, rand_state_test, porc_test)\n",
     "\n",
     "print(f'La codificación de la clase {col_clase} es: {dict_clase_num}')\n",
+    "print(f'Nombre de la columna codificada: {nombre_col_y_cod}')\n",
     "print(f'X_train shape: {X_train.shape}')\n",
     "print(f'X_test shape: {X_test.shape}')\n",
     "print(f'{preproc.df.shape}')\n",
@@ -2255,25 +2241,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "diagnostic_encoded\n",
-       "1    0.368146\n",
-       "0    0.312446\n",
-       "3    0.103568\n",
-       "5    0.102698\n",
-       "4    0.087903\n",
-       "2    0.025239\n",
-       "Name: count, dtype: float64"
-      ]
-     },
-     "execution_count": 340,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'diagnostic_encoded'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\doran\\anaconda3\\envs\\ml311\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'diagnostic_encoded'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[42], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df_y_prior \u001b[38;5;241m=\u001b[39m \u001b[43mpreproc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalcular_prior_clase\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf_imputado\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnombre_col_y_cod\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m df_y_prior\n",
+      "Cell \u001b[1;32mIn[32], line 261\u001b[0m, in \u001b[0;36mPreprocesamiento.calcular_prior_clase\u001b[1;34m(self, df, col_target)\u001b[0m\n\u001b[0;32m    260\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcalcular_prior_clase\u001b[39m(\u001b[38;5;28mself\u001b[39m, df:pd\u001b[38;5;241m.\u001b[39mDataFrame, col_target:\u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m--> 261\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcol_target\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mcount() \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    262\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNo hay datos en la columna target\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    263\u001b[0m     pd_prior \u001b[38;5;241m=\u001b[39m df[col_target]\u001b[38;5;241m.\u001b[39mvalue_counts() \u001b[38;5;241m/\u001b[39m df[col_target]\u001b[38;5;241m.\u001b[39mcount()\n",
+      "File \u001b[1;32mc:\\Users\\doran\\anaconda3\\envs\\ml311\\Lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32mc:\\Users\\doran\\anaconda3\\envs\\ml311\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'diagnostic_encoded'"
+     ]
     }
    ],
    "source": [
@@ -2305,7 +2296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2360,7 +2351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2442,14 +2433,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "el modelo se guardo en: models/24-11-24_753538_naive_bayes_model.pkl\n"
+      "el modelo se guardo en: models/24-11-25_463140_naive_bayes_model.pkl\n"
      ]
     },
     {
@@ -2475,7 +2466,7 @@
        "        0.01136364]])"
       ]
      },
-     "execution_count": 367,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2508,14 +2499,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "el modelo se guardo en: models/24-11-24_890287_logistic_regression_model.pkl\n"
+      "el modelo se guardo en: models/24-11-25_796538_logistic_regression_model.pkl\n"
      ]
     },
     {
@@ -2541,7 +2532,7 @@
        "        -1.26065068]])"
       ]
      },
-     "execution_count": 368,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2562,7 +2553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2610,17 +2601,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "el modelo se guardo en: data/24-11-24_425466_naive_bayes_model.pkl\n",
+      "el modelo se guardo en: models/24-11-25_339501_naive_bayes_model.pkl\n",
       "Calculo a priori de la clase y: [0.36814621 0.3124456  0.10356832 0.102698   0.08790252 0.02523934]\n",
       "Probabilidad a priori: [0.30970149 0.37686567 0.0261194  0.0920398  0.0858209  0.10945274]\n",
-      "el modelo se guardo en: data/24-11-24_438235_naive_bayes_model.pkl\n"
+      "el modelo se guardo en: models/24-11-25_352220_naive_bayes_model.pkl\n"
      ]
     },
     {
@@ -2675,13 +2666,13 @@
        "Naive_Bayes_y  0.231884  0.231884   0.286681  0.197118"
       ]
      },
-     "execution_count": 366,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nb_ruta_modelo = clasificador('naive_bayes', 'data', X_train, y_train)\n",
+    "nb_ruta_modelo = clasificador('naive_bayes', 'models', X_train, y_train)\n",
     "nb_modelo = joblib.load(nb_ruta_modelo)\n",
     "\n",
     "df_y_prior = preproc.calcular_prior_clase(df_imputado, nombre_col_y_cod)\n",
@@ -2694,7 +2685,7 @@
     "nb_metrics = evaluar_rendimiento(nb_ruta_modelo, 'metricas_evaluacion', X_test, y_test)\n",
     "pd_nb_metrics = pd.DataFrame(nb_metrics, index=['Naive_Bayes'])\n",
     "\n",
-    "nb_ruta_modelo_y = clasificador('naive_bayes', 'data', X_train, y_train, priors_nb=_y_prior)\n",
+    "nb_ruta_modelo_y = clasificador('naive_bayes', 'models', X_train, y_train, priors_nb=_y_prior)\n",
     "nb_modelo_y = joblib.load(nb_ruta_modelo_y)\n",
     "nb_metrics_y = evaluar_rendimiento(nb_ruta_modelo_y, 'metricas_evaluacion', X_test, y_test)\n",
     "pd_nb_metrics_y = pd.DataFrame(nb_metrics_y, index=['Naive_Bayes_y'])\n",
@@ -2710,6 +2701,35 @@
    "source": [
     "**obs.** Tomé los valores que me dan desde el dataframe imputado, antes de la division del X_train, y simplemente calculé el porcentaje del resultado de la clase. Como el prior es una probabilidad del target, puede ser que el valor que calculé según los datos, puede ser mejor, y así fue, todos las métricas bajaron. \n",
     "<hr style=\"border: 2px solid orange;\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.1, 0.5, 1. , 2.5, 5. ])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def obtener_datos_penalty(ruta_config_yaml:str, nombre_variable:str, nombre_penalty:str):\n",
+    "    with open(ruta_config_yaml, \"r\") as file:\n",
+    "        yaml_file = yaml.safe_load(file)\n",
+    "    alphas = yaml_file[nombre_variable][nombre_penalty]\n",
+    "    array_alphas = np.array(alphas)\n",
+    "    return array_alphas\n",
+    "\n",
+    "# están las penaltys alphas, alpha, l1_ratio, max_iter\n",
+    "array_alphas = obtener_datos_penalty(ruta_config_yaml, 'penalty', 'alphas')\n",
+    "array_alphas"
    ]
   },
   {
